Adding dep dependency management; switching to confluent kafka lib

--- a/kclient/Dockerfile
+++ b/kclient/Dockerfile
@@ -1,9 +1,9 @@
 FROM golang:1.8
 
-WORKDIR /go/src/kconsume
+WORKDIR /go/src/kclient
 COPY . .
 
 RUN go get -d -v ./...
 RUN go install -v ./...
 
-CMD ["kconsume"]
+CMD ["kclient"]
