--- a/kclient/Gopkg.toml
+++ b/kclient/Gopkg.toml
@@ -26,8 +26,20 @@
 
 
 [[constraint]]
+  name = "github.com/cihub/seelog"
+  version = "2.6.0"
+
+[[constraint]]
   name = "github.com/confluentinc/confluent-kafka-go"
   version = "0.11.0"
+
+[[constraint]]
+  name = "github.com/urfave/cli"
+  version = "1.20.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/vrecan/death"
 
 [prune]
   go-tests = true
