--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,7 @@ services:
       - kafka
     environment:
       KCLIENT_BROKER: ${DOCKER_MACHINE_IP}:29092
+      KCLIENT_TOPIC: foo
+      KCLIENT_GROUP: group1
     extra_hosts:
       - "moby:127.0.0.1"
