Added elasticsearch to docker-compose; initial producer with rate prototype

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,17 @@ services:
       KCLIENT_GROUP: group1
     extra_hosts:
       - "moby:127.0.0.1"
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.2
+    container_name: elasticsearch
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - 9200:9200
