WIP use _id field with UUIDs

--- a/esconnect/Dockerfile
+++ b/esconnect/Dockerfile
@@ -5,3 +5,5 @@ FROM confluentinc/cp-kafka-connect
 WORKDIR /esconnect
 COPY . .
 
+CMD ["/usr/bin/connect-standalone","connect-standalone.properties","connect-elasticsearch.properties"]
+
