--- a/esconnect/connect-elasticsearch.properties
+++ b/esconnect/connect-elasticsearch.properties
@@ -3,8 +3,7 @@ name=elasticsearch-sink
 connector.class=io.confluent.connect.elasticsearch.ElasticsearchSinkConnector
 tasks.max=1
 topics=foo
-key.ignore=true
+key.ignore=false
 schema.ignore=true
 connection.url=http://192.168.99.36:9200
 type.name=kafka-connect
-
