--- a/kclient/Gopkg.toml
+++ b/kclient/Gopkg.toml
@@ -34,6 +34,10 @@
   version = "0.11.0"
 
 [[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
+
+[[constraint]]
   name = "github.com/urfave/cli"
   version = "1.20.0"
 
